{
  "version": 4,
  "terraform_version": "0.12.23",
  "serial": 151,
  "lineage": "951dfd46-35ae-b363-f348-e5353ceb1509",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider.aws"
    },
    {
      "mode": "managed",
      "type": "aws_elb",
      "name": "DevOps-ELB",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:437350138466:loadbalancer/DevOps-ELB",
            "availability_zones": [
              "ap-south-1a",
              "ap-south-1b"
            ],
            "connection_draining": true,
            "connection_draining_timeout": 400,
            "cross_zone_load_balancing": true,
            "dns_name": "DevOps-ELB-1135455735.ap-south-1.elb.amazonaws.com",
            "health_check": [
              {
                "healthy_threshold": 2,
                "interval": 30,
                "target": "HTTP:80/",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "DevOps-ELB",
            "idle_timeout": 400,
            "internal": false,
            "listener": [
              {
                "instance_port": 80,
                "instance_protocol": "http",
                "lb_port": 80,
                "lb_protocol": "http"
              }
            ],
            "name": "DevOps-ELB",
            "security_groups": [
              "sg-0757d537d291a9198"
            ],
            "source_security_group": "437350138466/DevOps-ELB-SG",
            "source_security_group_id": "sg-0757d537d291a9198",
            "subnets": [
              "subnet-067cbcddfc80b041a",
              "subnet-084bfe5f2aeaaa0e1"
            ],
            "tags": {
              "Name": "DevOps-ELB"
            },
            "zone_id": "ZP97RAFLXTNZK"
          },
          "dependencies": [
            "aws_security_group.DevOps-ELB-SG",
            "aws_subnet.public-subnet",
            "aws_vpc.DevOps-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "DevOps-IGW",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-0914c3d996ad086e9",
            "owner_id": "437350138466",
            "tags": {
              "Name": "DevOps-IGW"
            },
            "vpc_id": "vpc-0c44a1bc772881dbc"
          },
          "dependencies": [
            "aws_vpc.DevOps-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "DevOps-Private-RT",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "DevOps-Public-RT",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0d55b3db9cd6f3705",
            "owner_id": "437350138466",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0914c3d996ad086e9",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "DevOps-Public-RT"
            },
            "vpc_id": "vpc-0c44a1bc772881dbc"
          },
          "dependencies": [
            "aws_internet_gateway.DevOps-IGW",
            "aws_vpc.DevOps-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-063196e20041f9d93",
            "route_table_id": "rtb-0d55b3db9cd6f3705",
            "subnet_id": "subnet-084bfe5f2aeaaa0e1"
          },
          "dependencies": [
            "aws_internet_gateway.DevOps-IGW",
            "aws_route_table.DevOps-Public-RT",
            "aws_subnet.public-subnet",
            "aws_vpc.DevOps-VPC"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02d55dc8d6d43d71f",
            "route_table_id": "rtb-0d55b3db9cd6f3705",
            "subnet_id": "subnet-067cbcddfc80b041a"
          },
          "dependencies": [
            "aws_internet_gateway.DevOps-IGW",
            "aws_route_table.DevOps-Public-RT",
            "aws_subnet.public-subnet",
            "aws_vpc.DevOps-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "b",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "DevOps-EC2-SG",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:437350138466:security-group/sg-0f51b78f0bce68532",
            "description": "Used in the terraform for Ec2 access",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f51b78f0bce68532",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "DevOps-EC2-SG",
            "name_prefix": null,
            "owner_id": "437350138466",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "DevOps-EC2-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c44a1bc772881dbc"
          },
          "dependencies": [
            "aws_vpc.DevOps-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "DevOps-ELB-SG",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:437350138466:security-group/sg-0757d537d291a9198",
            "description": "Used in the terraform for ELB access",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0757d537d291a9198",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "DevOps-ELB-SG",
            "name_prefix": null,
            "owner_id": "437350138466",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "DevOps-ELB-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c44a1bc772881dbc"
          },
          "dependencies": [
            "aws_vpc.DevOps-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-subnet",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:437350138466:subnet/subnet-018345448afd83460",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.10.3.0/24",
            "id": "subnet-018345448afd83460",
            "map_public_ip_on_launch": false,
            "owner_id": "437350138466",
            "tags": {
              "Name": "DevOps-Private-Subnet1"
            },
            "vpc_id": "vpc-0c44a1bc772881dbc"
          },
          "dependencies": [
            "aws_vpc.DevOps-VPC"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:437350138466:subnet/subnet-08d0765e997083b63",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.10.4.0/24",
            "id": "subnet-08d0765e997083b63",
            "map_public_ip_on_launch": false,
            "owner_id": "437350138466",
            "tags": {
              "Name": "DevOps-Private-Subnet2"
            },
            "vpc_id": "vpc-0c44a1bc772881dbc"
          },
          "dependencies": [
            "aws_vpc.DevOps-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:437350138466:subnet/subnet-084bfe5f2aeaaa0e1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.10.1.0/24",
            "id": "subnet-084bfe5f2aeaaa0e1",
            "map_public_ip_on_launch": true,
            "owner_id": "437350138466",
            "tags": {
              "Name": "DevOps-Public-Subnet1"
            },
            "vpc_id": "vpc-0c44a1bc772881dbc"
          },
          "dependencies": [
            "aws_vpc.DevOps-VPC"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:437350138466:subnet/subnet-067cbcddfc80b041a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.10.2.0/24",
            "id": "subnet-067cbcddfc80b041a",
            "map_public_ip_on_launch": true,
            "owner_id": "437350138466",
            "tags": {
              "Name": "DevOps-Public-Subnet2"
            },
            "vpc_id": "vpc-0c44a1bc772881dbc"
          },
          "dependencies": [
            "aws_vpc.DevOps-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "DevOps-VPC",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:437350138466:vpc/vpc-0c44a1bc772881dbc",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-02bbdf54c8e6d7957",
            "default_route_table_id": "rtb-0ebd6c1fe8d66670c",
            "default_security_group_id": "sg-0a527a337882207f2",
            "dhcp_options_id": "dopt-052e3f6d",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0c44a1bc772881dbc",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0ebd6c1fe8d66670c",
            "owner_id": "437350138466",
            "tags": {
              "Name": "DevOps-VPC"
            }
          }
        }
      ]
    }
  ]
}